[gd_scene load_steps=5 format=3 uid="uid://78j3447f1e85"]

[ext_resource type="Texture2D" uid="uid://ciqlsgoj3hm11" path="res://art/ball.png" id="1_l25dx"]
[ext_resource type="Script" path="res://ball.gd" id="1_rrkjq"]
[ext_resource type="AudioStream" uid="uid://bfhagkdp31yko" path="res://sound/beep.ogg" id="3_2q5r0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_utlvl"]
radius = 8.5

[node name="Ball" type="CharacterBody2D"]
scale = Vector2(2, 2)
collision_layer = 2
collision_mask = 13
motion_mode = 1
slide_on_ceiling = false
script = ExtResource("1_rrkjq")

[node name="Ball" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("1_l25dx")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_utlvl")

[node name="SpeedUpTimer" type="Timer" parent="."]
autostart = true

[node name="Sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_2q5r0")
volume_db = -19.676

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="." groups=["ball"]]
scale = Vector2(0.9, 0.9)

[connection signal="timeout" from="SpeedUpTimer" to="." method="_on_speed_up_timer_timeout"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
